--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
     </a>
     <hr />
     <h1>I Love cats too</h1>
-    <a href = "https://claude.ai/new"
+    <a href = "https://claude.ai/new">
     <img src="https://raw.githubusercontent.com/appbrewery/webdev/main/kitten.jpeg"
-        alt="A kitten held in someone's hand"/>/>
+        alt="A kitten held in someone's hand"/>
+    </a>
 </body>
 
 </html>
